Prepare to new deployment

--- a/package.json
+++ b/package.json
@@ -3,12 +3,24 @@
   "version": "0.1.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node build",
     "build": "tsc",
     "dev": "tsc --watch",
-    "lint": "eslint app --ext='ts'"
+    "lint": "eslint app --ext='ts'",
+    "prepublishOnly": "npm run build",
+    "deploy:install": "sudo cp /var/scpdb/featured/current/deploy/featured.service /etc/systemd/system/scpdb-featured.service && sudo systemctl enable scpdb-featured && npm run crontab:install",
+    "crontab:install": "sudo crontab -u scpdb /var/scpdb/featured/current/deploy/crontab",
+    "deploy:restart": "sudo systemctl restart scpdb-featured",
+    "deploy": "np && ssh mars.scpdb.org 'cd /var/scpdb/featured && npm upgrade scpdb-featured --latest && npm run symlink && cd current && npm run deploy:install && npm run deploy:restart'"
   },
+  "files": [
+    "app",
+    "build",
+    "deploy",
+    "public",
+    "tsconfig.json",
+    ".npmrc"
+  ],
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/scpdb/featured.git"
